@@ -3,23 +3,15 @@
 require 'spec_helper'
 
 RSpec.describe Kiba::Extend::Transforms::Merge::ConstantValue do
-  let(:accumulator){ [] }
-  let(:test_job){ Helpers::TestJob.new(input: input, accumulator: accumulator, transforms: transforms) }
-  let(:result){ test_job.accumulator }
-
-  let(:input) do
+  let(:transform){ described_class.new(target: :species, value: 'guinea fowl') }
+  
+  let(:rows) do
     [
       {name: 'Weddy', sex: 'm', source: 'adopted'},
-      {name: 'Kernel', sex: 'f', source: 'adopted'}
+      {name: 'Kernel', sex: 'f', source: 'adopted', species: 'Numida meleagris'}
     ]
   end
-
-  let(:transforms) do
-    Kiba.job_segment do
-      transform Merge::ConstantValue, target: :species, value: 'guinea fowl'
-    end
-  end
-
+  let(:results){ rows.map{ |row| transform.process(row) } }
   let(:expected) do
     [
       {name: 'Weddy', sex: 'm', source: 'adopted', species: 'guinea fowl' },
@@ -27,7 +19,9 @@ RSpec.describe Kiba::Extend::Transforms::Merge::ConstantValue do
     ]
   end
 
-  it 'merges specified constant data values into row' do
-    expect(result).to eq(expected)
+  it 'transforms and warns as expected', :aggregate_failures do
+    msg = "#{Kiba::Extend.warning_label}: Any values in existing `species` field will be overwritten with `guinea fowl`"
+    expect(transform).to receive(:warn).with(msg)
+    expect(results).to eq(expected)
   end
 end
